broke adding appointments, fixed deleting appointments

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -8,10 +8,14 @@
       <% @doctor.appointments.each do |appointment| %>
         <li>
           <%= appointment.patient.name %> - <%= appointment.time %> -
-          <%= link_to 'Remove', appointment_path(appointment), medthod: :delete, data: { confirm: 'Really Delete?' } %>
+          <%= link_to 'Remove', appointment_path(appointment), method: :delete, data: { confirm: 'Really Delete?' } %>
         </li>
       <% end %>
     </ul>
   <% else %>
     <h5> No Patients Found </h5>
   <% end %>
+
+<div class='center'>
+  <%= link_to 'Make Appointment', new_appointment_path, class: 'btn grey lighten-2 black-text' %>
+</div>
