--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -5,8 +5,10 @@
   <%= f.select :doctor_id, options_for_select(@doctors) %>
   <%= f.select :patient_id, options_for_select(@patients) %>
   <%= f.text_field :time, required: true, placeholder: 'Time' %>
-  <%= f.submit nil, class: 'btn grey lighten-2 black-text' %>
+  <div class='center'>
+    <%= f.submit nil, class:'btn grey lighten-2 black-text' %>
+  </div>
 <% end %>
 
-<%= link_to 'All Doctors', doctors_path %>  | 
+<%= link_to 'All Doctors', doctors_path %>  |
 <%= link_to 'All Patients', patients_path %>
