--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,21 @@
           <li> <%= link_to 'Doctors', doctors_path %> </li>
           <li> <%= link_to 'Patients', patients_path %> </li>
           <li> <%= link_to 'Make Appointment', new_appointment_path %> </li>
+            <% if user_signed_in? %>
+              <li> <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'btn black white-text' %> </li>
+            <% else %>
+              <li> <%= link_to 'Login', new_user_session_path, class: 'btn black white-text' %>
+            <%end %>
         </ul>
         <ul class="side-nav" id="mobile">
           <li> <%= link_to 'Doctors', doctors_path %> </li>
           <li> <%= link_to 'Patients', patients_path %> </li>
           <li> <%= link_to 'Make Appointment', new_appointment_path %> </li>
+            <% if user_signed_in? %>
+              <li> <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'btn black white-text' %> </li>
+            <% else %>
+              <li> <%= link_to 'Login', new_user_session_path, class: 'btn black white-text' %>
+            <%end %>
         </ul>
       </div>
     </nav>
